--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
                 <h2>Hello, my name is<br><span>Rahaf Mansour</span></h2>
                 <h3>I'm a <span>Front-End</span> Developer</h3>
 
-                <button class="download-btn">Download CV</button>
+                <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1QRDED_Mjx7gBtwN7Kb8Dm037bllCGuhd/view?usp=sharing', '_blank')">Download CV</button>
+
                 <div class="icon">
                     <a href="https://www.linkedin.com/in/rahaf-mansour-743478238/"><i
                             class="fa-brands fa-linkedin"></i></a>
